[package]
name = "oranda-one-platform-test"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/oranda-gallery/oranda-one-platform-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0-prerelease.5"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-pc-windows-msvc"]
